{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "a87a1db9-e0de-4504-9e81-99c4d2bb89e2",
            "actions": [
                {
                    "name": "MovePlayer1",
                    "type": "Value",
                    "id": "0ec4704e-efe1-431b-89d3-de88ef83c1e2",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovePlayer2",
                    "type": "Value",
                    "id": "237f8b4c-56ae-4e85-a744-3d0a43e4b94b",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Player1Interact",
                    "type": "Button",
                    "id": "0e970879-431f-41e1-b2c6-ff3e98bedcab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player1GeneratePortal",
                    "type": "Button",
                    "id": "4f35797d-4a71-4b99-ab2f-53a6d0b6bcc9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player1SendItem",
                    "type": "Button",
                    "id": "78bc8145-f079-4a44-b6f2-0baf322cc011",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2Interact",
                    "type": "Button",
                    "id": "7c458556-52be-4c1d-9a41-8d3e5b98998a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2GeneratePortal",
                    "type": "Button",
                    "id": "31cfc1ec-242f-4e89-a885-50482de8bc49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2SendItem",
                    "type": "Button",
                    "id": "689e580b-d7f5-485d-9857-b501b82972b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "afe16557-f982-48c2-9e15-02ca6b257286",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer1",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a5b6c0bd-6881-4066-afb5-83aa87707f17",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b95bd08e-e7e2-4af1-ad75-37187222faa4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c0d584cb-ccdb-44f7-b8c5-c4cd36e8ed1d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3b8fe66c-0a4d-4cef-8c9a-fe52c1fda069",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer1",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow",
                    "id": "bb87b26f-6ea8-41fd-818e-e41d115442b4",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c5b71305-27e6-4f63-a45b-cafdd5951016",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6dfefff7-593d-4eba-bb38-8586cdda477e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1031a468-08c2-48c2-b401-697dbe1f777c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dc701bf5-a394-4f62-9629-49e73a6cd6da",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "258ca87b-5d41-4a77-a94b-3141c98d674d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ff311eb-3604-4a4a-99c6-11c7bdb3cb5a",
                    "path": "<Keyboard>/numpad0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15fc8238-65ac-48f4-b30a-103f771cace5",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1GeneratePortal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41da2082-f6be-4cf2-a75e-2c35db1d94fe",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2GeneratePortal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96b62509-c681-47ef-bfce-51a70acdb963",
                    "path": "<Keyboard>/numpadPeriod",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2SendItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cb9b717-4d9f-473f-9984-71b9d2cd4257",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1SendItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "2beb6136-12b1-4e3e-a6af-a1aa07b13de2",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "3c50b771-6f24-4b5c-b260-392982b09397",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c762585f-b4d7-46ee-a9f1-1249bc293dc9",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}